Fix for QPID-2373 - Durable exchange state not replicated to broker joining cluster

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@904154 13f79535-47bb-0310-9956-ffa450edef68